force-app/main/default/objects/Skill_Bundle__c/Skill_Bundle__c.object-meta.xml
<CustomObject>
    <description>A reusable group of skill values that can be assigned to agents. Each bundle represents a role profile (e.g. Case Tier 1, Opp Enterprise, Bilingual). Agents can have multiple bundles assigned — their skills are the UNION of all bundle entries. Introduced in v6 to replace the flat Agent_Capability_Value__c model and eliminate the N x M record explosion.</description>
    <label>Skill Bundle</label>
    <nameField>
        <displayFormat>SKB-{0000000}</displayFormat>
        <label>Skill Bundle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>