force-app/main/default/objects/Skill_Bundle__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <description>Admin-facing label for this skill bundle. Must be unique across the org. Used in Setup Wizard, assignment UI, and error messages.</description>
    <externalId>true</externalId>
    <label>Bundle Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>