force-app/main/default/objects/Skill_Bundle__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this bundle is excluded from agent skill resolution.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>