force-app/main/default/objects/Skill_Bundle__c/fields/Object_Context__c.field-meta.xml
<CustomField>
    <fullName>Object_Context__c</fullName>
    <description>Informational grouping for admin organization.</description>
    <label>Object Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>